Modify video height to prevent it being too big

--- a/app/containers/Webrtc/styles.css
+++ b/app/containers/Webrtc/styles.css
@@ -4,6 +4,10 @@
   left: 0;
 }
 
+.container video {
+  height: 300px;
+}
+
 .smallVideo video {
   height: 150px;
 }
